--- a/index.html
+++ b/index.html
@@ -3,148 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunkiss — Салон загара</title>
+    <title>Юлия — Фармацевт, портфолио</title>
     <style>
-        :root{--bg:#FFF8F0;--accent:#F48C06;--muted:#6b6b6b;--card:#ffffff}
+        :root{--bg:#f6f9fb;--primary:#2b7a78;--accent:#ffb35c;--muted:#556}
         *{box-sizing:border-box}
-        body{margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;background:var(--bg);color:#222}
-        header{display:flex;justify-content:space-between;align-items:center;padding:18px 24px}
-        .brand{display:flex;align-items:center;gap:12px}
-        .sun{width:46px;height:46px;border-radius:50%;background:linear-gradient(135deg,#fff4e6,#ffd08a);display:flex;align-items:center;justify-content:center;box-shadow:0 6px 18px rgba(240,140,6,0.12)}
-        nav a{margin-left:14px;color:#333;text-decoration:none;font-weight:600}
-
-        .wrap{max-width:1100px;margin:28px auto;padding:0 20px}
-        .hero{display:flex;gap:24px;align-items:center}
-        .hero-left{flex:1}
-        .hero-right{width:360px}
-        h1{font-size:36px;margin:0 0 10px}
-        p.lead{color:var(--muted);margin:0 0 16px}
-        .cta{display:inline-block;background:var(--accent);color:#fff;padding:12px 16px;border-radius:12px;text-decoration:none;font-weight:700}
-
-        .services{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:16px;margin:22px 0}
-        .svc{background:var(--card);padding:16px;border-radius:12px;box-shadow:0 6px 18px rgba(16,24,40,0.04)}
-        .svc h3{margin:0 0 8px}
-        .svc p{margin:0;color:var(--muted);font-size:14px}
-        .price{font-weight:700;color:var(--accent)}
-
-        .gallery{display:flex;gap:10px;margin-top:18px}
-        .gallery img{width:100%;height:120px;object-fit:cover;border-radius:10px}
-
-        .contact{display:grid;grid-template-columns:1fr 340px;gap:18px;margin-top:22px}
-        .contact-card{background:var(--card);padding:18px;border-radius:12px}
-        .contact-card h3{margin-top:0}
-        .contact-list{line-height:1.6;color:var(--muted)}
-
-        footer{margin:36px 0;text-align:center;color:var(--muted)}
+        body{margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial;background:var(--bg);color:#102a43}
+        header{background:#fff;padding:18px 24px;box-shadow:0 2px 8px rgba(16,24,40,0.06)}
+        .wrap{max-width:1100px;margin:0 auto;padding:0 20px}
+        .brand{display:flex;align-items:center;gap:14px}
+        .avatar{width:54px;height:54px;border-radius:50%;background:linear-gradient(135deg,#fff,#eee);display:flex;align-items:center;justify-content:center;font-weight:700;color:var(--primary)}
+        nav{margin-left:auto}
+        nav a{margin-left:14px;color:var(--primary);text-decoration:none;font-weight:600}
 
         /* Slideshow */
-        .slideshow{max-width:1100px;margin:12px auto;padding:0 20px;position:relative;overflow:hidden;border-radius:12px}
+        .slideshow{max-width:1100px;margin:18px auto;padding:0 20px;position:relative;overflow:hidden;border-radius:10px}
         .slides{display:flex;transition:transform .6s ease}
         .slide{min-width:100%;flex-shrink:0}
-        .slide img{width:100%;height:320px;object-fit:cover;display:block}
-        .prev,.next{position:absolute;top:50%;transform:translateY(-50%);background:rgba(0,0,0,0.35);color:#fff;border:none;padding:10px;border-radius:8px;cursor:pointer}
+        .slide img{width:100%;height:340px;object-fit:cover;display:block;filter:saturate(.95)}
+        .slide-img{width:100%;height:340px;display:flex;align-items:center;justify-content:center;background-size:cover;background-position:center;border-radius:6px;color:#fff;font-weight:700;font-size:22px}
+        .prev,.next{position:absolute;top:50%;transform:translateY(-50%);background:rgba(16,24,40,0.35);color:#fff;border:none;padding:10px;border-radius:8px;cursor:pointer}
         .prev{left:12px}.next{right:12px}
         .dots{position:absolute;left:50%;transform:translateX(-50%);bottom:12px;display:flex;gap:8px}
-        .dot{width:10px;height:10px;border-radius:50%;background:rgba(255,255,255,0.5);cursor:pointer}
+        .dot{width:10px;height:10px;border-radius:50%;background:rgba(255,255,255,0.6);cursor:pointer}
         .dot.active{background:var(--accent)}
-        @media (max-width:880px){.slide img{height:180px}}
 
-        @media (max-width:880px){.hero{flex-direction:column}.contact{grid-template-columns:1fr}.hero-right{width:100%}}
+        /* Main */
+        main{max-width:1100px;margin:18px auto;padding:0 20px}
+        .intro{display:flex;gap:24px;align-items:center}
+        .intro .info{flex:1}
+        h1{margin:0;font-size:28px;color:var(--primary)}
+        p.lead{margin:8px 0;color:var(--muted)}
+        .btn{display:inline-block;background:var(--primary);color:#fff;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:700}
+
+        .grid{display:grid;grid-template-columns:1fr 320px;gap:20px;margin-top:20px}
+        .card{background:#fff;padding:16px;border-radius:10px;box-shadow:0 6px 18px rgba(16,24,40,0.04)}
+        .services{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:14px;margin-top:16px}
+
+        footer{max-width:1100px;margin:28px auto 60px;padding:0 20px;color:var(--muted);text-align:center}
+
+        @media (max-width:880px){.intro{flex-direction:column}.grid{grid-template-columns:1fr}.slide img{height:200px}}
     </style>
 </head>
 <body>
-    <header class="wrap">
-        <div class="brand">
-            <div class="sun" aria-hidden="true">☀️</div>
-            <div>
-                <div style="font-weight:800">Sunkiss</div>
-                <div style="font-size:12px;color:var(--muted)">Салон загара</div>
+    <header>
+        <div class="wrap" style="display:flex;align-items:center">
+            <div class="brand">
+                <div class="avatar">Ю</div>
+                <div>
+                    <div style="font-weight:800">Юлия — Фармацевт</div>
+                    <div style="font-size:13px;color:var(--muted)">Аптечная мережа «Подорожник», Полтава</div>
+                </div>
             </div>
+            <nav>
+                <a href="#about">Обо мне</a>
+                <a href="#services">Услуги</a>
+                <a href="#contact">Контакты</a>
+            </nav>
         </div>
-        <nav>
-            <a href="#services">Услуги</a>
-            <a href="#gallery">Галерея</a>
-            <a class="cta" href="#contact">Записаться</a>
-        </nav>
     </header>
 
     <!-- Slideshow -->
-    <section class="slideshow" aria-label="Слайдер Sunkiss">
+    <section class="slideshow" aria-label="Слайдер Юлии">
         <div class="slides" id="slides">
-            <div class="slide"><img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Sunkiss 1"></div>
-            <div class="slide"><img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Sunkiss 2"></div>
-            <div class="slide"><img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Sunkiss 3"></div>
+            <div class="slide"><img src="https://images.pexels.com/photos/3957983/pexels-photo-3957983.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Полки с лекарствами"></div>
+            <div class="slide"><img src="https://images.pexels.com/photos/3683054/pexels-photo-3683054.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Таблетки и упаковки"></div>
+            <div class="slide"><img src="https://images.pexels.com/photos/7088526/pexels-photo-7088526.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Фармацевт за работой"></div>
+        </div>
         </div>
         <button class="prev" id="prev" aria-label="Предыдущий">‹</button>
         <button class="next" id="next" aria-label="Следующий">›</button>
         <div class="dots" id="dots"></div>
     </section>
 
-    <main class="wrap">
-        <section class="hero">
-            <div class="hero-left">
-                <h1>Теплый загар и забота о коже</h1>
-                <p class="lead">Качественные процедуры, индивидуальный подход и комфортная атмосфера в центре Києва.</p>
-                <a class="cta" href="#contact">Записаться</a>
-                <div style="margin-top:12px;color:var(--muted)">или звоните: <strong style="color:#222">+38 (050) 123‑4567</strong> — Светлана Петровна</div>
+    <main>
+        <section id="about" class="wrap intro">
+            <div class="info">
+                <h1>Юлия — фармацевт из Полтавы</h1>
+                <p class="lead">Я работаю в аптечной сети «Подорожник», помогаю подбирать лекарства и даю фармацевтические консультации. Опыт работы — более 8 лет.</p>
+                <a class="btn" href="#contact">Связаться</a>
+                <p style="margin-top:12px;color:var(--muted)">Дома меня поддерживают муж Валера и сын Миша.</p>
             </div>
-            <div class="hero-right">
-                <div style="background:linear-gradient(180deg,#fff6eb,#ffe1b8);padding:18px;border-radius:12px;box-shadow:0 8px 30px rgba(16,24,40,0.06)">
-                    <h3 style="margin:0 0 8px">Специальное предложение</h3>
-                    <p style="margin:0;color:var(--muted)">Первое посещение — скидка 20% на любой сеанс.</p>
+            <div style="width:320px">
+                <div class="card">
+                    <h3>Опыт</h3>
+                    <p class="lead" style="margin:6px 0">Фармацевт в «Подорожник» — консультации по лекарствам, контроль взаимодействий, медицинская документация.</p>
                 </div>
             </div>
         </section>
 
-        <section id="services" class="services">
-            <div class="svc">
-                <h3>Солярий</h3>
-                <p class="price">от 150 ₴ / сеанс</p>
-                <p style="margin-top:8px;color:var(--muted)">Профессиональные лампы, безопасный режим и чистота кабины.</p>
-            </div>
-            <div class="svc">
-                <h3>Спрей‑загар</h3>
-                <p class="price">от 450 ₴</p>
-                <p style="margin-top:8px;color:var(--muted)">Равномерный бронзовый оттенок моментально.</p>
-            </div>
-            <div class="svc">
-                <h3>Уход за кожей</h3>
-                <p class="price">от 300 ₴</p>
-                <p style="margin-top:8px;color:var(--muted)">Пилинги, маски и профессиональные процедуры.</p>
-            </div>
-            <div class="svc">
-                <h3>Абонементы</h3>
-                <p class="price">от 1200 ₴ / мес.</p>
-                <p style="margin-top:8px;color:var(--muted)">Экономичные пакеты для регулярных клиентов.</p>
+        <section id="services" class="wrap">
+            <h2 style="margin:0 0 10px">Услуги</h2>
+            <div class="services">
+                <div class="card">
+                    <h3>Фармацевтическая консультация</h3>
+                    <p class="lead">Подбор лекарств и разъяснение схем приёма.</p>
+                </div>
+                <div class="card">
+                    <h3>Контроль взаимодействий</h3>
+                    <p class="lead">Оценка совместимости лекарств и рекомендации.</p>
+                </div>
+                <div class="card">
+                    <h3>Подбор препаратов</h3>
+                    <p class="lead">Подбор безрецептурных средств и витаминов.</p>
+                </div>
+                <div class="card">
+                    <h3>Консультации по прививкам</h3>
+                    <p class="lead">Информация о профилактике и вакцинах.</p>
+                </div>
             </div>
         </section>
 
-        <section id="gallery" class="gallery">
-            <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="1">
-            <img src="https://images.unsplash.com/photo-1521334884684-d80222895322?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="2">
-            <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="3">
-            <img src="https://images.unsplash.com/photo-1499084732479-de2c02d45fc4?q=80&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="4">
-        </section>
-
-        <section id="contact" class="contact">
-            <div class="contact-card">
+        <section id="contact" class="wrap grid">
+            <div class="card">
                 <h3>Контакты</h3>
-                <div class="contact-list">
-                    <div><strong>Адрес:</strong> м. Київ, вул. Перемоги, 12 (м. Святошино)</div>
-                    <div><strong>Телефон:</strong> <a href="tel:+380501234567">+38 (050) 123‑4567</a> — Светлана Петровна</div>
-                    <div><strong>Часы роботи:</strong> щодня 10:00–22:00</div>
-                </div>
+                <p class="lead">Полтава, Аптечная сеть «Подорожник»</p>
+                <p class="lead">Телефон: <a href="tel:+380501234567">+38 (050) 123‑4567</a></p>
+                <p class="lead">E‑mail: <a href="mailto:julya.pharm@example.com">julya.pharm@example.com</a></p>
+                <p style="color:var(--muted)">Готова помочь с подбором лекарств, проверкой взаимодействий и советами по приёму медикаментов.</p>
             </div>
 
-            <aside style="background:#fff;padding:16px;border-radius:12px;box-shadow:0 6px 18px rgba(16,24,40,0.04)">
-                <h3 style="margin-top:0">Карта</h3>
-                <div style="width:100%;height:220px;background:#eee;border-radius:8px;display:flex;align-items:center;justify-content:center;color:#999">(Iframe карты можно вставить здесь)</div>
+            <aside>
+                <div class="card">
+                    <h3>Личные данные</h3>
+                    <p class="lead">Красотка</p>
+                    <p class="lead">Пышный бюст</p>
+                </div>
+                <div class="card" style="margin-top:12px">
+                    <h3>Где найти</h3>
+                    <div style="width:100%;height:180px;background:#eee;border-radius:8px;display:flex;align-items:center;justify-content:center;color:#888">(Карта / адрес)</div>
+                </div>
             </aside>
         </section>
     </main>
 
     <footer>
-        © Sunkiss — Салон загара · Київ
+        © Юлия — Фармацевт. Аптечная сеть «Подорожник», Полтава
     </footer>
 
     <script>
@@ -169,6 +162,20 @@
             function goTo(i){ index = i; update(); }
 
             makeDots(); update();
+
+            // Генерируем встроенные SVG-фоны для слайдов (надёжно отображается локально)
+            (function(){
+                const slideImgs = slidesEl.querySelectorAll('.slide-img');
+                slideImgs.forEach((el, i)=>{
+                    const label = el.dataset.label || '';
+                    const colors = ['#3a8d91','#2b7a78','#4aa3a0'];
+                    const bg = colors[i % colors.length];
+                    const svg = `<?xml version="1.0" encoding="UTF-8"?><svg xmlns='http://www.w3.org/2000/svg' width='1400' height='800'><rect width='100%' height='100%' fill='${bg}'/><g fill='white' font-family='Arial, Helvetica, sans-serif' font-weight='700' font-size='36'><text x='50%' y='45%' dominant-baseline='middle' text-anchor='middle'>${label}</text></g></svg>`;
+                    const uri = 'data:image/svg+xml;utf8,' + encodeURIComponent(svg);
+                    el.style.backgroundImage = `url("${uri}")`;
+                });
+            })();
+
             let timer = setInterval(nextSlide, 4000);
             next.addEventListener('click', ()=>{ nextSlide(); resetTimer(); });
             prev.addEventListener('click', ()=>{ prevSlide(); resetTimer(); });
