--- a/index.html
+++ b/index.html
@@ -3,184 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Юлия — Фармацевт, портфолио</title>
+    <title>Алексей — Системный Администратор</title>
     <style>
-        :root{--bg:#f6f9fb;--primary:#2b7a78;--accent:#ffb35c;--muted:#556}
-        *{box-sizing:border-box}
-        body{margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, Arial;background:var(--bg);color:#102a43}
-        header{background:#fff;padding:18px 24px;box-shadow:0 2px 8px rgba(16,24,40,0.06)}
-        .wrap{max-width:1100px;margin:0 auto;padding:0 20px}
-        .brand{display:flex;align-items:center;gap:14px}
-        .avatar{width:54px;height:54px;border-radius:50%;background:linear-gradient(135deg,#fff,#eee);display:flex;align-items:center;justify-content:center;font-weight:700;color:var(--primary)}
-        nav{margin-left:auto}
-        nav a{margin-left:14px;color:var(--primary);text-decoration:none;font-weight:600}
-
-        /* Slideshow */
-        .slideshow{max-width:1100px;margin:18px auto;padding:0 20px;position:relative;overflow:hidden;border-radius:10px}
-        .slides{display:flex;transition:transform .6s ease}
-        .slide{min-width:100%;flex-shrink:0}
-        .slide img{width:100%;height:340px;object-fit:cover;display:block;filter:saturate(.95)}
-        .slide-img{width:100%;height:340px;display:flex;align-items:center;justify-content:center;background-size:cover;background-position:center;border-radius:6px;color:#fff;font-weight:700;font-size:22px}
-        .prev,.next{position:absolute;top:50%;transform:translateY(-50%);background:rgba(16,24,40,0.35);color:#fff;border:none;padding:10px;border-radius:8px;cursor:pointer}
-        .prev{left:12px}.next{right:12px}
-        .dots{position:absolute;left:50%;transform:translateX(-50%);bottom:12px;display:flex;gap:8px}
-        .dot{width:10px;height:10px;border-radius:50%;background:rgba(255,255,255,0.6);cursor:pointer}
-        .dot.active{background:var(--accent)}
-
-        /* Main */
-        main{max-width:1100px;margin:18px auto;padding:0 20px}
-        .intro{display:flex;gap:24px;align-items:center}
-        .intro .info{flex:1}
-        h1{margin:0;font-size:28px;color:var(--primary)}
-        p.lead{margin:8px 0;color:var(--muted)}
-        .btn{display:inline-block;background:var(--primary);color:#fff;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:700}
-
-        .grid{display:grid;grid-template-columns:1fr 320px;gap:20px;margin-top:20px}
-        .card{background:#fff;padding:16px;border-radius:10px;box-shadow:0 6px 18px rgba(16,24,40,0.04)}
-        .services{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:14px;margin-top:16px}
-
-        footer{max-width:1100px;margin:28px auto 60px;padding:0 20px;color:var(--muted);text-align:center}
-
-        @media (max-width:880px){.intro{flex-direction:column}.grid{grid-template-columns:1fr}.slide img{height:200px}}
+        :root { --bg: #1e1e2f; --primary: #4caf50; --accent: #ff9800; --muted: #b0bec5; }
+        * { box-sizing: border-box; }
+        body { margin: 0; font-family: Arial, sans-serif; background: var(--bg); color: #fff; }
+        header { background: #121212; padding: 20px; text-align: center; }
+        header h1 { margin: 0; color: var(--primary); }
+        header p { margin: 5px 0; color: var(--muted); }
+        .container { max-width: 1100px; margin: 20px auto; padding: 0 20px; }
+        .skills, .projects { margin-top: 30px; }
+        .skills h2, .projects h2 { color: var(--accent); }
+        .skills ul, .projects ul { list-style: none; padding: 0; }
+        .skills li, .projects li { background: #2c2c3c; margin: 10px 0; padding: 15px; border-radius: 8px; }
+        footer { text-align: center; margin: 40px 0; color: var(--muted); }
     </style>
 </head>
 <body>
     <header>
-        <div class="wrap" style="display:flex;align-items:center">
-            <div class="brand">
-                <div class="avatar">Ю</div>
-                <div>
-                    <div style="font-weight:800">Юлия — Фармацевт</div>
-                    <div style="font-size:13px;color:var(--muted)">Аптечная мережа «Подорожник», Полтава</div>
-                </div>
-            </div>
-            <nav>
-                <a href="#about">Обо мне</a>
-                <a href="#services">Услуги</a>
-                <a href="#contact">Контакты</a>
-            </nav>
-        </div>
+        <h1>Алексей — Системный Администратор</h1>
+        <p>Опыт работы: более 10 лет. Специализация: серверы, сети, безопасность.</p>
     </header>
-
-    <!-- Slideshow -->
-    <section class="slideshow" aria-label="Слайдер Юлии">
-        <div class="slides" id="slides">
-            <div class="slide"><img src="https://images.pexels.com/photos/3957983/pexels-photo-3957983.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Полки с лекарствами"></div>
-            <div class="slide"><img src="https://images.pexels.com/photos/3683054/pexels-photo-3683054.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Таблетки и упаковки"></div>
-            <div class="slide"><img src="https://images.pexels.com/photos/7088526/pexels-photo-7088526.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Фармацевт за работой"></div>
-        </div>
-        </div>
-        <button class="prev" id="prev" aria-label="Предыдущий">‹</button>
-        <button class="next" id="next" aria-label="Следующий">›</button>
-        <div class="dots" id="dots"></div>
-    </section>
-
-    <main>
-        <section id="about" class="wrap intro">
-            <div class="info">
-                <h1>Юлия — фармацевт из Полтавы</h1>
-                <p class="lead">Я работаю в аптечной сети «Подорожник», помогаю подбирать лекарства и даю фармацевтические консультации. Опыт работы — более 8 лет.</p>
-                <a class="btn" href="#contact">Связаться</a>
-                <p style="margin-top:12px;color:var(--muted)">Дома меня поддерживают муж Валера и сын Миша.</p>
-            </div>
-            <div style="width:320px">
-                <div class="card">
-                    <h3>Опыт</h3>
-                    <p class="lead" style="margin:6px 0">Фармацевт в «Подорожник» — консультации по лекарствам, контроль взаимодействий, медицинская документация.</p>
-                </div>
-            </div>
+    <div class="container">
+        <section class="skills">
+            <h2>Навыки</h2>
+            <ul>
+                <li>Управление серверами Windows и Linux</li>
+                <li>Настройка сетевого оборудования (Cisco, Mikrotik)</li>
+                <li>Виртуализация (VMware, Hyper-V)</li>
+                <li>Обеспечение информационной безопасности</li>
+                <li>Мониторинг и резервное копирование</li>
+            </ul>
         </section>
-
-        <section id="services" class="wrap">
-            <h2 style="margin:0 0 10px">Услуги</h2>
-            <div class="services">
-                <div class="card">
-                    <h3>Фармацевтическая консультация</h3>
-                    <p class="lead">Подбор лекарств и разъяснение схем приёма.</p>
-                </div>
-                <div class="card">
-                    <h3>Контроль взаимодействий</h3>
-                    <p class="lead">Оценка совместимости лекарств и рекомендации.</p>
-                </div>
-                <div class="card">
-                    <h3>Подбор препаратов</h3>
-                    <p class="lead">Подбор безрецептурных средств и витаминов.</p>
-                </div>
-                <div class="card">
-                    <h3>Консультации по прививкам</h3>
-                    <p class="lead">Информация о профилактике и вакцинах.</p>
-                </div>
-            </div>
+        <section class="projects">
+            <h2>Проекты</h2>
+            <ul>
+                <li>Миграция инфраструктуры компании на облачные сервисы</li>
+                <li>Разработка системы мониторинга серверов и сетей</li>
+                <li>Внедрение политики информационной безопасности</li>
+                <li>Оптимизация работы корпоративной сети</li>
+            </ul>
         </section>
-
-        <section id="contact" class="wrap grid">
-            <div class="card">
-                <h3>Контакты</h3>
-                <p class="lead">Полтава, Аптечная сеть «Подорожник»</p>
-                <p class="lead">Телефон: <a href="tel:+380501234567">+38 (050) 123‑4567</a></p>
-                <p class="lead">E‑mail: <a href="mailto:julya.pharm@example.com">julya.pharm@example.com</a></p>
-                <p style="color:var(--muted)">Готова помочь с подбором лекарств, проверкой взаимодействий и советами по приёму медикаментов.</p>
-            </div>
-
-            <aside>
-                <div class="card">
-                    <h3>Личные данные</h3>
-                    <p class="lead">Красотка</p>
-                    <p class="lead">Пышный бюст</p>
-                </div>
-                <div class="card" style="margin-top:12px">
-                    <h3>Где найти</h3>
-                    <div style="width:100%;height:180px;background:#eee;border-radius:8px;display:flex;align-items:center;justify-content:center;color:#888">(Карта / адрес)</div>
-                </div>
-            </aside>
-        </section>
-    </main>
-
+    </div>
     <footer>
-        © Юлия — Фармацевт. Аптечная сеть «Подорожник», Полтава
+        © 2026 Алексей — Системный Администратор. Все права защищены.
     </footer>
-
-    <script>
-        (function(){
-            const slidesEl = document.getElementById('slides');
-            const slides = slidesEl.children;
-            const dotsEl = document.getElementById('dots');
-            const prev = document.getElementById('prev');
-            const next = document.getElementById('next');
-            let index = 0;
-            const total = slides.length;
-
-            function makeDots(){
-                for(let i=0;i<total;i++){const d=document.createElement('div');d.className='dot';d.dataset.i=i;d.addEventListener('click',()=>goTo(i));dotsEl.appendChild(d)}
-            }
-            function update(){
-                slidesEl.style.transform = 'translateX('+(-index*100)+'%)';
-                Array.from(dotsEl.children).forEach((d,i)=>d.classList.toggle('active', i===index));
-            }
-            function nextSlide(){ index = (index+1) % total; update(); }
-            function prevSlide(){ index = (index-1+total) % total; update(); }
-            function goTo(i){ index = i; update(); }
-
-            makeDots(); update();
-
-            // Генерируем встроенные SVG-фоны для слайдов (надёжно отображается локально)
-            (function(){
-                const slideImgs = slidesEl.querySelectorAll('.slide-img');
-                slideImgs.forEach((el, i)=>{
-                    const label = el.dataset.label || '';
-                    const colors = ['#3a8d91','#2b7a78','#4aa3a0'];
-                    const bg = colors[i % colors.length];
-                    const svg = `<?xml version="1.0" encoding="UTF-8"?><svg xmlns='http://www.w3.org/2000/svg' width='1400' height='800'><rect width='100%' height='100%' fill='${bg}'/><g fill='white' font-family='Arial, Helvetica, sans-serif' font-weight='700' font-size='36'><text x='50%' y='45%' dominant-baseline='middle' text-anchor='middle'>${label}</text></g></svg>`;
-                    const uri = 'data:image/svg+xml;utf8,' + encodeURIComponent(svg);
-                    el.style.backgroundImage = `url("${uri}")`;
-                });
-            })();
-
-            let timer = setInterval(nextSlide, 4000);
-            next.addEventListener('click', ()=>{ nextSlide(); resetTimer(); });
-            prev.addEventListener('click', ()=>{ prevSlide(); resetTimer(); });
-            function resetTimer(){ clearInterval(timer); timer = setInterval(nextSlide,4000); }
-        })();
-    </script>
 </body>
 </html>
