--- a/index.html
+++ b/index.html
@@ -1,188 +1,256 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Системный администратор | IT поддержка</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>IT Outsourcing | System Administrator</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
+<style>
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Segoe UI", Arial, sans-serif;
+}
 
-        body {
-            background: #0f172a;
-            color: #e5e7eb;
-            line-height: 1.6;
-        }
+body {
+    background: #0b1220;
+    color: #e5e7eb;
+    line-height: 1.6;
+}
 
-        header {
-            background: linear-gradient(120deg, #020617, #0f172a);
-            padding: 80px 20px;
-            text-align: center;
-        }
+header {
+    background: linear-gradient(135deg, #020617, #0b1220);
+    padding: 80px 20px;
+}
 
-        header h1 {
-            font-size: 2.5rem;
-            margin-bottom: 10px;
-        }
+.header-box {
+    max-width: 1100px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    align-items: center;
+}
 
-        header p {
-            font-size: 1.2rem;
-            color: #94a3b8;
-        }
+.lang {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
 
-        section {
-            padding: 60px 20px;
-            max-width: 1100px;
-            margin: auto;
-        }
+.lang button {
+    background: #020617;
+    border: 1px solid #1e293b;
+    color: #e5e7eb;
+    padding: 6px 10px;
+    margin-left: 5px;
+    border-radius: 6px;
+    cursor: pointer;
+}
 
-        h2 {
-            text-align: center;
-            margin-bottom: 40px;
-            font-size: 2rem;
-        }
+header h1 {
+    font-size: 2.5rem;
+    margin-bottom: 15px;
+}
 
-        .about {
-            display: flex;
-            gap: 40px;
-            flex-wrap: wrap;
-            align-items: center;
-        }
+header p {
+    color: #94a3b8;
+    margin-bottom: 25px;
+}
 
-        .about img {
-            width: 100%;
-            max-width: 400px;
-            border-radius: 12px;
-        }
+.btn {
+    display: inline-block;
+    padding: 14px 28px;
+    background: #2563eb;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: 600;
+}
 
-        .services {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
+header img {
+    width: 100%;
+    border-radius: 14px;
+}
 
-        .card {
-            background: #020617;
-            padding: 25px;
-            border-radius: 12px;
-            border: 1px solid #1e293b;
-        }
+section {
+    max-width: 1100px;
+    margin: auto;
+    padding: 70px 20px;
+}
 
-        .card h3 {
-            margin-bottom: 10px;
-        }
+h2 {
+    text-align: center;
+    margin-bottom: 40px;
+    font-size: 2rem;
+}
 
-        .why {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            text-align: center;
-        }
+.services, .benefits {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    gap: 25px;
+}
 
-        .why div {
-            background: #020617;
-            padding: 30px;
-            border-radius: 12px;
-            border: 1px solid #1e293b;
-        }
+.card {
+    background: #020617;
+    padding: 28px;
+    border-radius: 14px;
+    border: 1px solid #1e293b;
+}
 
-        .contact {
-            text-align: center;
-        }
+.about {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    align-items: center;
+}
 
-        .contact p {
-            font-size: 1.1rem;
-            margin-bottom: 10px;
-        }
+.about img {
+    width: 100%;
+    border-radius: 14px;
+}
 
-        footer {
-            background: #020617;
-            padding: 20px;
-            text-align: center;
-            color: #64748b;
-        }
-    </style>
+.contact {
+    text-align: center;
+}
+
+footer {
+    background: #020617;
+    text-align: center;
+    padding: 20px;
+    color: #64748b;
+}
+
+@media (max-width: 800px) {
+    .header-box, .about {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+}
+</style>
 </head>
 
 <body>
 
+<div class="lang">
+    <button onclick="setLang('ru')">RU</button>
+    <button onclick="setLang('ua')">UA</button>
+    <button onclick="setLang('en')">EN</button>
+</div>
+
 <header>
-    <h1>Системный администратор</h1>
-    <p>Надёжная IT-поддержка • Серверы • Сети • Безопасность</p>
+    <div class="header-box">
+        <div>
+            <h1 data-i18n="title"></h1>
+            <p data-i18n="subtitle"></p>
+            <a href="#contact" class="btn" data-i18n="button"></a>
+        </div>
+        <img src="https://images.unsplash.com/photo-1537432376769-00a0c1b6d5a1" alt="IT Support">
+    </div>
 </header>
 
 <section>
-    <h2>Обо мне</h2>
-    <div class="about">
-        <img src="https://images.unsplash.com/photo-1581091012184-5c8d8f64c1c1" alt="Sysadmin">
-        <div>
-            <p>
-                Я системный администратор с практическим опытом поддержки
-                серверов, рабочих станций и сетевой инфраструктуры.
-            </p>
-            <p>
-                Работаю с Windows, Linux, Mikrotik, резервным копированием,
-                видеонаблюдением и IT-безопасностью.
-            </p>
-        </div>
-    </div>
-</section>
-
-<section>
-    <h2>Услуги</h2>
+    <h2 data-i18n="services_title"></h2>
     <div class="services">
-        <div class="card">
-            <h3>🖥 Администрирование серверов</h3>
-            <p>Windows Server, Linux, виртуализация, резервное копирование</p>
-        </div>
-        <div class="card">
-            <h3>🌐 Сети и интернет</h3>
-            <p>Настройка маршрутизаторов, VPN, Wi-Fi, Mikrotik</p>
-        </div>
-        <div class="card">
-            <h3>🔐 Безопасность</h3>
-            <p>Firewall, защита данных, антивирусы, резервные копии</p>
-        </div>
-        <div class="card">
-            <h3>💡 Поддержка пользователей</h3>
-            <p>Удалённая помощь, настройка ПК, ПО и периферии</p>
-        </div>
+        <div class="card" data-i18n="s1"></div>
+        <div class="card" data-i18n="s2"></div>
+        <div class="card" data-i18n="s3"></div>
+        <div class="card" data-i18n="s4"></div>
     </div>
 </section>
 
 <section>
-    <h2>Почему я</h2>
-    <div class="why">
-        <div>
-            <h3>⚡ Быстро</h3>
-            <p>Оперативная реакция на проблемы</p>
-        </div>
-        <div>
-            <h3>🧠 Опыт</h3>
-            <p>Практические решения, а не теория</p>
-        </div>
-        <div>
-            <h3>🔧 Надёжно</h3>
-            <p>Стабильность и отказоустойчивость</p>
-        </div>
+    <h2 data-i18n="about_title"></h2>
+    <div class="about">
+        <div data-i18n="about_text"></div>
+        <img src="https://images.unsplash.com/photo-1581091012184-5c8d8f64c1c1" alt="Sysadmin">
     </div>
 </section>
 
-<section class="contact">
-    <h2>Контакты</h2>
-    <p>Email: admin@example.com</p>
-    <p>Telegram: @sysadmin</p>
-    <p>Удалённая и локальная поддержка</p>
+<section>
+    <h2 data-i18n="why_title"></h2>
+    <div class="benefits">
+        <div class="card" data-i18n="b1"></div>
+        <div class="card" data-i18n="b2"></div>
+        <div class="card" data-i18n="b3"></div>
+    </div>
+</section>
+
+<section id="contact" class="contact">
+    <h2 data-i18n="contact_title"></h2>
+    <p>Email: it.support@example.com</p>
+    <p>Telegram: @it_support</p>
 </section>
 
 <footer>
-    © 2026 Системный администратор
+    © 2026 IT Outsourcing
 </footer>
+
+<script>
+const texts = {
+    ru: {
+        title: "IT-аутсорсинг и системный администратор",
+        subtitle: "Поддержка компьютеров, серверов и сетей для бизнеса и частных клиентов",
+        button: "Связаться",
+        services_title: "Услуги",
+        s1: "🖥 IT-поддержка и настройка ПК",
+        s2: "🌐 Сети, Wi-Fi, VPN, Mikrotik",
+        s3: "🗄 Серверы и резервное копирование",
+        s4: "🔐 Информационная безопасность",
+        about_title: "Обо мне",
+        about_text: "Частный системный администратор. Удобная альтернатива штатному IT-специалисту.",
+        why_title: "Почему я",
+        b1: "⚡ Быстро реагирую",
+        b2: "💼 Опыт работы с бизнесом",
+        b3: "🔧 Практичные решения",
+        contact_title: "Контакты"
+    },
+    ua: {
+        title: "IT-аутсорсинг та системний адміністратор",
+        subtitle: "Підтримка комп'ютерів, серверів і мереж",
+        button: "Звʼязатися",
+        services_title: "Послуги",
+        s1: "🖥 IT-підтримка та налаштування ПК",
+        s2: "🌐 Мережі, Wi-Fi, VPN, Mikrotik",
+        s3: "🗄 Сервери та резервне копіювання",
+        s4: "🔐 Інформаційна безпека",
+        about_title: "Про мене",
+        about_text: "Приватний системний адміністратор для бізнесу та дому.",
+        why_title: "Чому я",
+        b1: "⚡ Швидка реакція",
+        b2: "💼 Досвід для бізнесу",
+        b3: "🔧 Практичні рішення",
+        contact_title: "Контакти"
+    },
+    en: {
+        title: "IT Outsourcing & System Administrator",
+        subtitle: "IT support for business and private clients",
+        button: "Contact me",
+        services_title: "Services",
+        s1: "🖥 IT support & PC setup",
+        s2: "🌐 Networks, Wi-Fi, VPN, Mikrotik",
+        s3: "🗄 Servers & backups",
+        s4: "🔐 IT security",
+        about_title: "About me",
+        about_text: "Freelance system administrator. Reliable IT outsourcing.",
+        why_title: "Why choose me",
+        b1: "⚡ Fast response",
+        b2: "💼 Business-oriented",
+        b3: "🔧 Practical solutions",
+        contact_title: "Contacts"
+    }
+};
+
+function setLang(lang) {
+    document.documentElement.lang = lang;
+    document.querySelectorAll("[data-i18n]").forEach(el => {
+        el.innerText = texts[lang][el.dataset.i18n];
+    });
+}
+
+setLang("ru");
+</script>
 
 </body>
 </html>
